# FxClashX

./: .gitignore  .gitmodules  AGENTS.md  README.md  README_EN.md  agent.md  distribute_options.yaml  pubspec.yaml  setup.dart
.agent/: COMMAND_TRACE.md  DECISIONS.md  ERROR_HISTORY.md  LAST_CHAT_HANDOFF.md  LOCAL_PATCHES.md  MEMORY_INDEX.md  OPEN_QUESTIONS.md  PROJECT_CUTOFF.md  PROJECT_STATE.md  RELEASE_STATE.md  RESOURCE_LINKS.md  UPDATE_GATES.md
.agent/runbooks/: android-build-debug.md  android-release-signing.md  android-runtime-security-check.md  desktop-build.md  ffi-core-bridge.md  flutter-build.md  incident-android-vpn-fails.md  incident-build-fails.md  incident-subscription-not-parsed.md  local-dev.md  local-proxy-security-check.md  localization-update.md  mihomo-core-integration.md  release-pipeline.md  (+4 more)
.github/: pre_release_template.md  release_template.md
agent/: BUILD_ARTIFACTS.md  CURRENT_STATE.md  HANDOFF.md  README.md
android/: .gitignore  settings.gradle.kts
android/core/src/main/cpp/: CMakeLists.txt  core.cpp  jni_helper.cpp
android/core/src/main/cpp/includes/arm64-v8a/: libclash.h
android/core/src/main/cpp/includes/armeabi-v7a/: libclash.h
arb/: intl_en.arb  intl_ja.arb  intl_ru.arb  intl_zh_CN.arb
core/: action.go  android_bride.go  common.go  constant.go  go.mod  go.sum  hub.go  lib.go  lib_android.go  lib_other.go
lib/: application.dart  controller.dart  main.dart  state.dart
linux/: CMakeLists.txt  my_application.cc
test/: runtime_config_security_sanitizer_test.dart  subscription_headers_test.dart  xhttp_transport_test.dart
windows/: CMakeLists.txt
(+150 files in other folders)
